# onnx-inference-service

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
api/: main.py
models/: churn_mlp.onnx  churn_mlp.pt  churn_mlp_int8.onnx  train_metrics.json
reports/: benchmark.json  benchmark.md
src/serve/: benchmark.py  data.py  export_onnx.py  model.py  quantize.py  runner.py  train.py
tests/: conftest.py  test_api.py  test_benchmark.py  test_data.py  test_export.py  test_model.py  test_quantize.py  test_runner.py
